
5.2a2 -> 5.2a3:
    - jbj: rpmssl: don't bother with (unused) NID_foo.
    - jbj: use digest names in debugging messages.
    - jbj: name digests according to RFC 4880 section 9.4.
    - jbj: rename s/hdrmd5ctx/hdrctx/ used by RSA to avoid legacy confusions.
    - jbj: fix: RSA V4 signed *.rpm plaintext hash was not generated correctly.
    - jbj: ensure that digest agrees with signature hash algorithm.
    - jbj: digest: add getters for digest name/algo/ANS1oid.
    - jbj: rpmssl: functional RSA verify --usecrypto ssl for signature(...) probe.
    - jbj: rpmgc: functional RSA verify --usecrypto gc for signature(...) probe.
    - jbj: rpmgc: bulldoze the RSA compost. still not working yet ...
    - jbj: rpmpgp: add ASN1 goop for SHA-224, add to bc/gc/nss/ssl.
    - jbj: bury file actions into iosm, replace XFA_SKIPPING with a
	iosmFileActionSkipped() call.
    - rpm.org: Add "deptype" format extension.
    - rpm.org: Fix segfault on packages without separate scriptlet program tags
	(rhbz#475214).
    - jbj: don't attempt install if rpmgiNext() returns RPMRC_FAIL.
    - jbj: transFlags: regroup bits together in poptI table.
    - jbj: transFlags: use POPT_SET_BIT consistently, no callbacks needed.
    - jbj: transFlags: add --nopretrans/--noposttrans disablers.
    - jbj: lua: disable embedded socket/crypto/xmlrpc modules. external instead.
    - jbj: sketch in %remove file flag, surely gonna change before finished.
    - jbj: transFlags: eliminate --nomd5, use --nofdigests instead.
    - jbj: sketch in arbitrary per-package Transflags: tag.
    - jbj: transFlags: add RPMTRANS_FLAGS_NORPMDB and --norpmdb disablers.
    - jbj: transFlags: eliminate (never implemented) RPMTRANS_KEEP_OBSOLETES.
    - jbj: python: remove compile warnings from rpmWriteHeaders() addition.
    - afb: rpmrepo: fix installed size bug (wrong value being written)
    - pixel: handle posttrans p with no body.
    - proyvind: python: add writeHeaderListToFD() & writeHeaderListToFile().